--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -22,7 +22,6 @@ h5 {
     width: 60%;
 }
 
-
 .card {
     background-color: rgb(0,0,0,0.7);
     margin-top: 40px;
@@ -71,15 +70,8 @@ h5 {
     font-size: 14px;
 }
 
-/* footer {
-    width: 100%;
-    color: white;
-    background-color: black;
-    text-align: center;
-} */
-
 .heading-logo {
-    width: 15%;
+    width: 100px;
 }
 
 .heading-logo-limit {
@@ -95,20 +87,19 @@ h5 {
 } 
 
 .heading-price {
-    width: 20%;
-    margin-right: 10px;
+    width: 30%;
 }
 
 .heading-price-limit {
-    width: 20%;
-    margin-right: 10px;
+    width: 30%;
 }
 .heading-button {
-    width: 25%;
+    width: 15%;
 }
 
-.heading-limit {
-    width: 15%
+.heading-arrow {
+    width: 10%;
+    margin-left: 5%;
 }
 
 .stock {
@@ -121,10 +112,10 @@ h5 {
 }
 
 .stockpic {
-    width: 15%;
+    width: 100px;
     height: 100%;
     float: left;
-    margin-top: 25px;
+    margin-top: 20px;
 }
 
 .stockpic-limit {
@@ -135,8 +126,8 @@ h5 {
 }
 
 .stockpic img {
-    height: 55px;
-    width: 55px;
+    height: 60px;
+    width: 60px;
     border-radius: 5px;
     object-fit: fill;
 }
@@ -166,12 +157,15 @@ h5 {
 }
 
 .stockbutton {
-    width: 25%;
+    width: 15%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 
 .stockprice {
-    width: 25%;
+    width: 30%;
     float: left;
     background-color: #000;
     font-size: 24px;
@@ -181,7 +175,7 @@ h5 {
 }
 
 .stockprice-limit {
-    width: 20%;
+    width: 30%;
     float: left;
     background-color: #000;
     color: #FFF;
@@ -219,6 +213,9 @@ h5 {
     color: white;
     font-weight: 600;
     font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .filterbutton {
@@ -284,93 +281,16 @@ h5 {
     margin-bottom: 10px;
 }
 
- /* responsive */
-@media (min-width: 300px) {
-    body {
-      background-color: #000; 
-    }
-    .stockwatch .card img {
-        width: 60%
-    }
-    .card .card-content {
-        padding:0px;
-    }
-    .stocksymbol {
-        font-size: 11px;;
-    }
-    .stockprice {
-        font-size: 10px;
-        line-height: 3.5;
-    }
-    .heading {
-        font-size: 11px;
-    }
-    .stockpic img{
-        height: 30px;
-        margin-top: 13px;
-    }
-    .stockprice-limit{
-        width: 30%;
-        line-height: 2.1;
-        font-size: 16px;
-    }
-    
-    
 
-}
-@media (min-width: 440px) {
-    .stocksymbol {
-        font-size: 18px;;
-    }
-    .stockprice {
-        font-size: 16px;
-        line-height: 2.6;
-    }
-    .heading {
-        font-size: 14px;
-    }
-}
+footer {
+    width: 40%;
+    background: black;
+    padding: 10px;
+    border-radius: 10px;
+    margin: 10px;
+    color: white;
+    margin-left:30%;
+    margin-right: 30%;
+    text-align: center;
 
-
-@media (min-width: 768px) {
-    body {
-        background-image: url("../images/bkg.jpg");
-        background-size: cover;
-        background-repeat: repeat;
-    }
-    .stockwatch .card img {
-        width: 30%
-    }
-    .card .card-content {
-        padding:24px;
-    }
-    .stocksymbol {
-        font-size: 24px;;
-    }
-    .stockprice {
-        font-size: 18px;
-        line-height: 2.3;
-    }
-    .heading {
-        font-size: 16px;
-    }
-    .stockpic img{
-        height: 45px;
-        margin-top: 5px;
-    }
-    .stockprice-limit{
-        width: 15%;
-        font-size: 18px;
-        
-    }
-}
-@media (min-width: 992px) {
-    .stockprice{
-        font-size: 24px;
-        line-height: unset;
-    }
-    
-}
-
-@media (min-width: 1200px) {
 }
